--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,10 @@ version: '{build}'
 
 os: Visual Studio 2015
 
+branches:
+  only:
+    - master
+
 environment:
   ANACONDA_API_TOKEN:
     secure: x49MwWIEjGZeuRcREd0z2+787R7vj6nNm0H9OiScUVZHMznCcmNkBBsVdpvzWFaS
